rgbds-0.6.1/test/asm/fixed-oob.asm
SECTION "ROM0", ROM0[$BABE]

SECTION "ROMX", ROMX[$BEEF]

SECTION "VRAM", VRAM[$C0DE]

SECTION "SRAM", SRAM[$CAFE]

SECTION "WRAM0", WRAM0[$DEAD]

SECTION "WRAMX", WRAMX[$DAD]

SECTION "OAM", OAM[$CAB]

SECTION "HRAM", HRAM[$BAD]
